fixed some styling issues on mobile version. also made it so that if you refresh the page you stay on the same page

--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,14 @@ textarea {
   padding: 5px;
 }
 
+.padding-left {
+  padding-left: 10px;
+}
+
+.padding-right {
+  padding-right: 10px;
+}
+
 li {
   list-style-type: none;
 }
